--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -20,8 +20,11 @@ li {
 }
 
 .markdown-body h1 {
-  background-color: var(--color-bg);
   color: var(--color-fg);
+  max-width: inherit;
+  padding-top: 2em;
+  margin-bottom: 2em;
+  text-align: center;
 }
 
 .markdown-body h2, .markdown-body h3 {
@@ -42,11 +45,6 @@ li {
   font-size: 85%;
   margin: 0;
   padding: .2em .4em;
-}
-
-.markdown-body h1 + p {
-  text-align: center;
-  margin: -40px 0 4em 0;
 }
 
 #icons a {
